Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.3.xx
DATE 0x/xx/2008
14th Alpha Release

NEWS:


NEW: [features/improvements]
+Automatically fill search field with selected text in buffer when performing
a search action.
+Show Shelf menu command keybinding is now configurable
+Some Vi emulation improvements

BUG FIXES:
+Add missing Portuguese locale files to setup script
+Fix some clipboard and dnd bugs
+Fix window scrolling issue when executing some vi commands
+Fix error when creating file position cache file fails

#-----------------------------------------------------------------------------#

VERSION 0.3.15
DATE 06/15/2008
13th Alpha Release

NEWS:

This release was originally intended to be a minor bug fix release but has
expanded to include a number of new features and additions as well. The most
visual change is the new application icon that was designed and submitted to
the community forum by Kurt Schelin. 

All of the bundled plugins have recieved overhauls and updates. From this
version when the bundled plugins are updated the will only be available with
the updated Editra code as they are often only compatible with the most recent
release.


NEW: [features/improvements]
+New application icon (designed by Kurt Schelin)
+Multi-line comments are foldable in C/CPP/D
+New version of CodeBrowser (improved python, added sql)
+New version of FileBrowser
+New version of Launch (add shortcut, custom colors, auto clear option)
+Interface font is configurable
+Add Norwegian Nynorsk Translation (contributed by JoNNeMaNN)
+Add French Translation
+Add Brazilian Portuguese Translation (contributed by Ricardo Crudo)
+Add Ukrainian Translation (contributed by Igor Chomko)
+New bundled style sheet 'Mocha'
+Improved context menu behavior
+Can toggle status bar visibility

BUG FIXES: